Repository completed + Controller & Service wip
