# rtcms4j-notify-server/src/main/kotlin/ru/enzhine/rtcms4j/notify/repository/dto/ApplicationFeedback.kt
@@ -1,0 +1,9 @@
+package ru.enzhine.rtcms4j.notify.repository.dto
+
+import java.time.LocalDateTime
+
+data class ApplicationFeedback(
+    val timestamp: LocalDateTime,
+    val clientName: String,
+    val secretRotated: Boolean,
+)
