# rtcms4j-notify-server/src/main/kotlin/ru/enzhine/rtcms4j/notify/repository/dto/ConfigurationFeedback.kt
@@ -1,0 +1,9 @@
+package ru.enzhine.rtcms4j.notify.repository.dto
+
+import java.time.LocalDateTime
+
+data class ConfigurationFeedback(
+    val timestamp: LocalDateTime,
+    val clientName: String,
+    val version: String,
+)
